tests/baselines/reference/parserPublicBreak1.errors.txt
==== tests/cases/compiler/parserPublicBreak1.ts (2 errors) ====
    public break;
    ~~~~~~
!!! parserPublicBreak1.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
           ~~~~~~
!!! parserPublicBreak1.ts(1,8): error TS2202: 'break' statement can only be used within an enclosing iteration or switch statement.
    